--- a/tests/dummy/lib/eager-blog/addon/templates/application.hbs
+++ b/tests/dummy/lib/eager-blog/addon/templates/application.hbs
@@ -1,6 +1,5 @@
-<h3 class="title">Eager engine</h3>
+<h3 class='title'>Eager engine</h3>
 
-<LinkTo @route="index" @current-when="index post" class="current-when-test-link">All Posts</LinkTo> |
-<LinkTo @route="post">Post 1</LinkTo>
+{{link-to "All Posts" "index" current-when="index post" class="current-when-test-link"}} | {{link-to "Post 1" "post" 1}}
 
 {{outlet}}
