--- a/tests/dummy/lib/ember-blog/addon/templates/new.hbs
+++ b/tests/dummy/lib/ember-blog/addon/templates/new.hbs
@@ -1,8 +1,8 @@
 <div class="engine">
   New Route!!
 
-  <HelloWorld class="routable-hello-world" />
+  {{hello-world class="routable-hello-world"}}
 
-  <button class="trigger-transition-to" type="button" {{on "click" this.goAway}}>Go Away!</button>
-  <button class="trigger-transition-to-url" type="button" {{on "click" this.goAwayViaURL}}>Go Away via URL!</button>
+  <button {{action 'goAway'}} class="trigger-transition-to">Go Away!</button>
+  <button {{action 'goAwayViaURL'}} class="trigger-transition-to-url">Go Away via URL!</button>
 </div>
