--- a/tests/dummy/lib/ember-blog/addon/templates/post/comments.hbs
+++ b/tests/dummy/lib/ember-blog/addon/templates/post/comments.hbs
@@ -1,5 +1,5 @@
-<h4 class="comments">Comments for {{this.model.title}}</h4>
+<h4 class="comments">Comments for {{model.title}}</h4>
 
-<LinkTo @route="post" class="back-to-post-link">
+{{#link-to "post" class="back-to-post-link"}}
   Back to Post
-</LinkTo>
+{{/link-to}}
