--- a/tests/dummy/lib/ember-chat/addon/templates/application.hbs
+++ b/tests/dummy/lib/ember-chat/addon/templates/application.hbs
@@ -1,7 +1,7 @@
 <div class="engine">
-  Engine: {{this.name}}
+  Engine: {{name}}
 
-  <div class="hello"><HelloWorld @name={{this.name}} /></div>
+  <div class="hello">{{hello-world name=name}}</div>
 
-  <div class="hola"><SpanishGreeting @name={{this.name}} /></div>
+  <div class="hola">{{spanish-greeting name=name}}</div>
 </div>
