--- a/test-app/lib/ember-blog/addon/templates/post.hbs
+++ b/test-app/lib/ember-blog/addon/templates/post.hbs
@@ -34,7 +34,7 @@
 </button>
 
 <button class="routable-replace-external-button {{if this.replaceWithExternal "replaced-with-external"}}" type="button" {{on "click" this.replaceWithHomeByService}}>
-    Go home progammatically (Engine Router Service)
+    Go home programmatically (Engine Router Service)
 </button>
 
 
