feat: add tests for the refresh method

--- a/test-app/app/templates/application.hbs
+++ b/test-app/app/templates/application.hbs
@@ -1,4 +1,7 @@
 <h1>Ember Engines Demo</h1>
+<span class='global-refresh-counter'>
+  {{@model.count}}
+</span>
 
 <LinkTo @route="routeless-engine-demo" class="routeless-engine">Routeless Engine</LinkTo> |
 <LinkTo @route="routable-engine-demo" class="routeable-engine">Routeable Engine</LinkTo> |
