--- a/test-app/lib/ember-blog/addon/templates/new.hbs
+++ b/test-app/lib/ember-blog/addon/templates/new.hbs
@@ -1,6 +1,10 @@
 <div class="engine">
   New Route!!
 
+  <span class="route-refresh-counter">
+    {{@model.count}}
+  </span>
+
   <HelloWorld class="routable-hello-world" />
 
   <button class="trigger-transition-to" type="button" {{on "click" this.goAway}}>Go Away!</button>
