fix: remove single quotes, add newer prettier config

--- a/test-app/app/templates/application.hbs
+++ b/test-app/app/templates/application.hbs
@@ -1,10 +1,12 @@
 <h1>Ember Engines Demo</h1>
-<span class='global-refresh-counter'>
+<span class="global-refresh-counter">
   {{@model.count}}
 </span>
 
-<LinkTo @route="routeless-engine-demo" class="routeless-engine">Routeless Engine</LinkTo> |
-<LinkTo @route="routable-engine-demo" class="routeable-engine">Routeable Engine</LinkTo> |
+<LinkTo @route="routeless-engine-demo" class="routeless-engine">Routeless Engine</LinkTo>
+|
+<LinkTo @route="routable-engine-demo" class="routeable-engine">Routeable Engine</LinkTo>
+|
 <LinkTo @route="post" @model="1" class="non-blog-post">Non-Blog Post</LinkTo>
 
 {{outlet}}
